--- a/src/Resources/views/filter/filter_form_bootstrap_4_layout.html.twig
+++ b/src/Resources/views/filter/filter_form_bootstrap_4_layout.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
+{% form_theme form '@HeimrichHannotContaoFilter/Form/bootstrap_4_layout.html.twig' %}
 
 {% block body %}
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
