added date_range twig template

--- a/src/Resources/views/form/fields/date_range.html.twig
+++ b/src/Resources/views/form/fields/date_range.html.twig
@@ -1,4 +1,9 @@
 {% block date_range_widget %}
     {% set type = type|default('date_range') %}
-    {{- form_widget(start) -}}
+    {% for child in form %}
+        <li>
+            {{ dump(child) }}
+            {{ form_widget(child) }}
+        </li>
+    {% endfor %}
 {%- endblock date_range_widget %}
