--- a/src/Resources/views/filter/filter_form_bootstrap_3_layout.html.twig
+++ b/src/Resources/views/filter/filter_form_bootstrap_3_layout.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'bootstrap_3_layout.html.twig' %}
+{% form_theme form '@HeimrichHannotContaoFilter/form/bootstrap_3_layout.html.twig' %}
 
 {% block body %}
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
