--- a/src/Resources/views/form/bootstrap_5_layout.html.twig
+++ b/src/Resources/views/form/bootstrap_5_layout.html.twig
@@ -10,7 +10,7 @@
     {%- if help is not empty -%}
         {%- set widget_attr = {attr: {'aria-describedby': id ~"_help"}} -%}
     {%- endif -%}
-    {%- set row_class = row_class|default(row_attr.class|default('mb-3')|trim) -%}
+    {%- set row_class = row_class|default(row_attr.class|default(attr.class|default('mb-3'))|trim) -%}
     <{{ element|default('div') }}{% with {attr: row_attr|merge({class: (row_class ~ ' ' ~ name)|trim})} %}{{ block('attributes') }}{% endwith %}>
     {%- if 'form-floating' in row_class -%}
         {{- form_widget(form, widget_attr) -}}
